# strix-claude-code

./: .gitignore  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml  publish.yml
src/strix_cli_claude/: __init__.py  main.py  mcp_server.py  sandbox.py  scan_manager.py  tui.py
tests/: conftest.py  test_main.py  test_mcp_server.py  test_sandbox.py  test_scan_manager.py  test_tui.py
