[project]
name = "strix-cli-claude"
version = "0.1.0"
description = "AI-powered penetration testing using Claude CLI"
authors = [{name = "Strix CLI Claude"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "mcp>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
strix-cli = "strix_cli_claude.main:main"
strix-tui = "strix_cli_claude.tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strix_cli_claude"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
